<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QRMap</string>
    <string name="menu_settings">Settings</string>
    <string name="button">Button</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="EmailAddress">EmailAddress</string>
    <string name="Signup">Signup</string>
    <string name="Login">Login</string>
    <string name="don_t_have_an_account_yet_">Don\'t have an account yet?</string>
    <string name="send">send</string>
    
    <string name="hello">MainActivity</string>

    <string name="qrcode">QRcode</string>
    <string name="like">Like</string>
    <string name="cancel">Cancel</string>
    <string name="todo">TODO</string>

</resources>